--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
 numpy>=1.19.0
-opencv-contrib-python>=4.5.0
-# Optional packages
-matplotlib>=3.3.0  # If you want to plot data or visualize results
-pandas>=1.2.0     # If you need to save/analyze position data
-PyYAML>=5.4.0     # If you want to add configuration files 
+opencv-python>=4.7.0.72
+opencv-contrib-python>=4.7.0.72
